# tech-radar-tui

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  Makefile  README.md  README.txt  adrs.db
.moon/: toolchain.yml  workspace.yml
adrs/: 2026-01-26-astro.mdx  2026-01-26-azure.mdx  2026-01-26-react.mdx  2026-01-26-testrwtr.mdx  2026-01-26-vue.mdx  2026-01-27-rerer.mdx  2026-01-28-react.mdx  2026-01-28-teser.mdx  2026-01-28-tesgter.mdx  2026-01-28-vue.mdx  2026-01-29-alan.mdx  2026-01-29-dsfdsf.mdx  2026-01-29-resard.mdx  2026-01-29-test.mdx  2026-01-29-tserer.mdx  2026-01-29-werwer.mdx  2026-01-30-sdfsdf.mdx  2026-01-30-test-223.mdx  2026-01-31-atom.mdx  2026-01-31-tesrasedrsdf.mdx  2026-01-31-test-dfdsf.mdx  2026-02-04-.mdx
apps/tui/: .env  CHANGELOG.md  Cargo.toml  README.md  moon.yml
apps/tui/migrations/: 20250418084809_create_adr_log_table.sql  20250418084848_create_blip_table.sql  20260126160000_link_adrs_blips.sql  20260128100000_create_app_settings.sql  20260129120000_add_adr_status.sql
apps/tui/src/: cli.rs  domain.rs  lib.rs  main.rs
apps/tui/src/app/: actions.rs  input.rs  mod.rs  state.rs
apps/tui/src/app/input/: helpers.rs  mod.rs
apps/tui/src/app/input/screens/: adr_actions.rs  adr_details.rs  adrs.rs  blip_actions.rs  blip_details.rs  blips.rs  edit_adr.rs  edit_blip.rs  help.rs  main.rs  mod.rs
apps/tui/src/config/: config.rs  mod.rs
apps/tui/src/db/: migrations.rs  mod.rs  models.rs  queries.rs  test_db.rs
apps/tui/src/event/: loop_handler.rs  mod.rs
apps/tui/src/terminal/: mod.rs  setup.rs
apps/tui/src/ui/: mod.rs  render.rs
apps/tui/src/ui/screens/: adr_actions.rs  adr_details.rs  adrs.rs  blip_actions.rs  blip_details.rs  blips.rs  edit_adr.rs  edit_blip.rs  main.rs  mod.rs
apps/tui/src/ui/widgets/: charts.rs  mod.rs  popup.rs  radar.rs  tables.rs
apps/web/: CHANGELOG.md  Cargo.toml  README.txt  Trunk.toml  index.html  radar.json
apps/web/src/: animation.rs  main.rs
blips/: 2026-01-26-astro.mdx  2026-01-26-azure.mdx  2026-01-26-blip.mdx  2026-01-26-entra.mdx  2026-01-26-gsfg.mdx  2026-01-26-helix.mdx  2026-01-26-kafka.mdx  2026-01-26-preact.mdx  2026-01-26-rac.mdx  2026-01-26-react.mdx  2026-01-26-react3.mdx  2026-01-26-redux.mdx  2026-01-26-reduxs.mdx  2026-01-26-remix.mdx  2026-01-26-rerer.mdx  2026-01-26-svelte.mdx  2026-01-26-test.mdx  2026-01-26-tester.mdx  2026-01-26-tf.mdx  2026-01-26-vm.mdx  2026-01-26-vue.mdx  2026-01-27-astrosfsdf.mdx  2026-01-27-fsdfsdf.mdx  2026-01-29-alan.mdx  2026-01-29-dsf-sdfsdf.mdx  2026-01-29-efsdfdsf--sdf.mdx  2026-01-29-fsdf.mdx  2026-01-29-resr-dfgdfg.mdx  2026-01-29-rser-rere.mdx  2026-01-29-sdfdsf.mdx  2026-01-29-teser.mdx  2026-01-29-test-terwer--.mdx  2026-01-30-dfgd.mdx  2026-01-30-dsf.mdx  2026-01-30-dsfdsfdsdsf.mdx  2026-01-30-dsfsdf.mdx  2026-01-30-tesrserser.mdx  (+3 more)
(+9 files in other folders)
