[package]
name = "ratatui_adr-gen"
version = "0.1.0"
edition = "2021"
description = "Terminal UI for creating ADRs and tech radar blips"
license = "MIT"
repository = "https://github.com/example/tech-radar-tui"
keywords = ["tui", "adr", "tech-radar"]
categories = ["command-line-utilities"]

[dependencies]
ratatui = "0.30.0"
ratatui-core = "0.1.0"
throbber-widgets-tui = "0.10.0"
crossterm = "0.27.0"  # Terminal backend
tokio = { version = "1", features = ["full"] } # If you need async
color-eyre = "0.6.2"  # Better error handling
# Database
sqlx = { version = "0.7.3", features = ["sqlite", "runtime-tokio-rustls"] }
# Environment variables
dotenv = "0.15.0"
# Error handling
thiserror = "1.0"
# Date handling
chrono = "0.4"
atty = "0.2"
clap = { version = "4.5.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
fuzzy-matcher = "0.3"
tachyonfx = { version = "0.23.0", features = ["std-duration", "sendable"] }

[dev-dependencies]

[lints.rust]
unsafe_code = "forbid"
rust_2018_idioms = { level = "warn", priority = -1 }

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
dbg_macro = "warn"
expect_used = "warn"
unwrap_used = "warn"
todo = "warn"
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
struct_excessive_bools = "allow"
too_many_lines = "allow"
too_many_arguments = "allow"
wildcard_imports = "allow"
doc_markdown = "allow"
similar_names = "allow"
multiple_crate_versions = "allow"
