[package]
name = "tech_radar_web"
version = "0.1.0"
edition = "2021"
description = "Ratzilla web dashboard for the Tech Radar"
license = "MIT"
repository = "https://github.com/opsydyn/tech-radar-tui"
keywords = ["tui", "ratatui", "ratzilla", "tech-radar"]
categories = ["wasm"]
readme = "README.txt"
metadata = { clippy = { allow = ["cargo_common_metadata"] } }

[dependencies]
ratzilla = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde-wasm-bindgen = "0.6"
web-sys = { version = "0.3", features = ["Request", "RequestInit", "RequestMode", "Response", "Window", "console"] }
